--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remind-vue",
+  "name": "to-do",
   "version": "0.0.1",
   "author": "蒋领 <ling.jiang.1011@gmail.com>",
   "description": "An reminder APP by electron-vue",
