--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "bootstrap-vue": "^2.0.0-rc.22",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "nedb": "^1.8.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
